# spdlog

./: CMakeLists.txt
cmake/: Config.cmake.in
example/: CMakeLists.txt  android.cpp  bench.cpp  example.cpp
include/spdlog/details/: spdlog_impl.h
include/spdlog/sinks/: android_sink.h
